--- a/index.html
+++ b/index.html
@@ -5,13 +5,27 @@
     <link href="resources/css/style.css" rel="stylesheet">
   </head>
 
-
 <body>
-
+<!-- Main Sectio with Video -->
   <h1>Discover hidden places in the world around you</h1>
-    <p><a>Download Excursion (Coming soon!)</a></p>
+    <p><a href="#">Download Excursion (Coming soon!)</a></p>
 
+    <video autoplay muted loop>
+       <source src="resources/videos/excursion.mp4" type="video/mp4">
+     </video>
+
+<!-- Supporting Content -->
+  <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+    <img src="resources/images/camp.jpg" alt="Camping at night" />
+    <img src="resources/images/phone.png" alt="Cell Phone icon" />
+
+  <h2>Coming soon for iPhone and Android</h2>
+    <p><a href="#">Download Excursion (Coming soon!)</a></p>
+
+<!-- Footer -->
+    <p>&copy; Excursion</p>
 
 </body>
-
 </html>
