Upload final version of project

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <title></title>
+    <title>Excursion App  - discover hidden places</title>
     <link href="resources/css/style.css" rel="stylesheet">
   </head>
 
 <body>
-<!-- Main Sectio with Video -->
+<!-- Main Section with Video -->
   <h1>Discover hidden places in the world around you</h1>
     <p><a href="#">Download Excursion (Coming soon!)</a></p>
 
@@ -18,14 +18,14 @@
   <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
 
-    <img src="resources/images/camp.jpg" alt="Camping at night" />
-    <img src="resources/images/phone.png" alt="Cell Phone icon" />
+    <p><img src="resources/images/camp.jpg" alt="Camping at night" /></p>
+    <p><img src="resources/images/phone.png" alt="Cell Phone icon" /></p>
 
   <h2>Coming soon for iPhone and Android</h2>
     <p><a href="#">Download Excursion (Coming soon!)</a></p>
 
 <!-- Footer -->
-    <p>&copy; Excursion</p>
+    <p class="footer">&copy; Excursion</p>
 
 </body>
 </html>
